--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "mwi/laravel-kit",
-    "description": "MWI Starter Kit for Laravel Projects",
-    "keywords": ["starter", "laravel"],
+    "name": "mwi/laravel-crud",
+    "description": "MWI Crud setup for Laravel Projects",
+    "keywords": ["CRUD", "laravel"],
     "license": "MIT",
     "authros": [
         {
@@ -9,14 +9,8 @@
             "email": "rd@buildmidwestern.com"
         }
     ],
-    "require": {
-        "bugsnag/bugsnag-laravel": "^2.0",
-        "doctrine/dbal": "^2.6",
-        "laravelcollective/html": "^5.5",
-        "spatie/laravel-permission": "^2.7"
-    },
     "autoload": {
-        "psr-4": { "MWI\\LaravelKit\\": "src/" }
+        "psr-4": { "MWI\\LaravelCrud\\": "src/" }
     },
     "config": {
         "preferred-install": "dist",
@@ -26,7 +20,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "MWI\\LaravelKit\\LaravelKitServiceProvider"
+                "MWI\\LaravelCrud\\LaravelCrudServiceProvider"
             ]
         }
     }
