updated service provider

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "MWI\\LaravelCrud\\LaravelCrudServiceProvider"
+                "MWI\\LaravelCrud\\ServiceProvider"
             ]
         }
     }
