--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "mwi/laravel-crud",
     "description": "MWI Crud setup for Laravel Projects",
-    "version": "2.0.2",
+    "version": "v2.0.3",
     "keywords": ["CRUD", "laravel"],
     "license": "MIT",
     "authors": [
