--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "laravel/framework": "^5.3",
+        "laravel/framework": "^5.3"
     },
     "autoload": {
         "psr-4": { "MWI\\LaravelCrud\\": "src/" }
