--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "laravel/framework": "^5.3"
+        "laravel/framework": "^5.3 || ^6.0"
     },
     "autoload": {
         "psr-4": { "MWI\\LaravelCrud\\": "src/" }
